@@ -1,45 +1,10 @@
 {
-  "timestamp" : "2022-07-29T08:11:59Z",
-  "count_outdated" : 438,
-  "uniques_outdated" : 35,
-  "count" : 451,
-  "uniques" : 42,
+  "timestamp" : "2022-08-07T16:29:27Z",
+  "count_outdated" : 449,
+  "uniques_outdated" : 40,
+  "count" : 526,
+  "uniques" : 43,
   "views" : [
-    {
-      "timestamp": "2022-07-18T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-07-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-07-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-07-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-07-22T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 1,
@@ -51,6 +16,13 @@
       "timestamp": "2022-07-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-07T00:00:00Z",
+      "count": 75,
+      "count_minmax": [ 75, 75 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
