@@ -1,32 +1,7 @@
 {
-  "count": 13,
+  "count": 77,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-07-18T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2022-07-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2022-07-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2022-07-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2022-07-22T00:00:00Z",
-      "count": 5,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 1,
@@ -35,6 +10,11 @@
     {
       "timestamp": "2022-07-29T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-07T00:00:00Z",
+      "count": 75,
       "uniques": 1
     }
   ]
